# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink

ADD_SUBDIRECTORY(renderer)
ADD_SUBDIRECTORY(general)
ADD_SUBDIRECTORY(examples)

  ADD_SUBDIRECTORY(hlrs)
  ADD_SUBDIRECTORY(vipar)
  ADD_SUBDIRECTORY(ivd)
  ADD_SUBDIRECTORY(koeln)
  ADD_SUBDIRECTORY(chemnitz)
  ADD_SUBDIRECTORY(spp1155)
  ADD_SUBDIRECTORY(ite)
  ADD_SUBDIRECTORY(spbgpu)
  ADD_SUBDIRECTORY(visenso)
  ADD_SUBDIRECTORY(gcsc)
  ADD_SUBDIRECTORY(ihs)
  ADD_SUBDIRECTORY(werner)
  ADD_SUBDIRECTORY(sfb374)
  IF(NOT WIN32)
#    ADD_SUBDIRECTORY(SCA)
ENDIF()

IF (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/src/module/univiz"AND EXISTS ${PROJECT_SOURCE_DIR}/vistle/module/univiz/CMakeLists.txt)
    SET(UNIVIZ_COVISE TRUE)
    ADD_SUBDIRECTORY(univiz)
ENDIF()
