# @file
# 
# Simply descend to subdirectories
#
# @author Blasius Czink
IF(NOT WIN32)
ADD_SUBDIRECTORY(rTCPTunnel)
ENDIF()
ADD_SUBDIRECTORY(vrcw)
IF(COVISE_USE_QT5)
  ADD_SUBDIRECTORY(comote)
ENDIF()
ADD_SUBDIRECTORY(CoolEmAllCasePreparation)
ADD_SUBDIRECTORY(CoolEmAllWriteToDatabase)
ADD_SUBDIRECTORY(samsungctrl)
ADD_SUBDIRECTORY(map_converter)
ADD_SUBDIRECTORY(giswalk)
ADD_SUBDIRECTORY(captureART)
ADD_SUBDIRECTORY(TestPipe)
ADD_SUBDIRECTORY(f80ctrl)
IF(WIN32)
ADD_SUBDIRECTORY(Revit)
ADD_SUBDIRECTORY(vrmlexp)
ENDIF()
#ADD_SUBDIRECTORY(zSpaceTest)

IF(NOT UNIX)
  RETURN()
ENDIF()

ADD_SUBDIRECTORY(clean)
ADD_SUBDIRECTORY(bison++)
#ADD_SUBDIRECTORY(catcov)
#ADD_SUBDIRECTORY(erg2cov)
