USING(OpenSceneGraph)

SET(CONV_PAGED_LOD_SOURCES
  convPagedLOD.cpp
)

SET(CONV_PAGED_LOD_HEADERS
)

ADD_COVISE_EXECUTABLE(convPagedLOD ${CONV_PAGED_LOD_SOURCES} ${CONV_PAGED_LOD_HEADERS})
TARGET_LINK_LIBRARIES(convPagedLOD ${OPENSCENEGRAPH_LIBRARIES})

INCLUDE_DIRECTORIES(
  ${OPENSCENEGRAPH_INCLUDE_DIRS}
)

COVISE_INSTALL_TARGET(convPagedLOD)

